--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "begin-app",
   "version": "0.0.0",
-  "description": "A simple Begin app with the minimum necessary file structure",
+  "description": "ServerlessBootstrap email newsletter",
   "scripts": {
     "start": "npx sandbox"
   },
   "devDependencies": {
     "@architect/sandbox": "^3.3"
+  },
+  "dependencies": {
+    "@architect/functions": "^3.13.9"
   }
 }
