--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.0.0",
   "description": "ServerlessBootstrap email newsletter",
   "scripts": {
-    "start": "npx sandbox"
+    "start": "npx sandbox",
+    "styles": "npx cssmitten ./config.json > ./public/styles/styles.css"
   },
   "devDependencies": {
     "@architect/sandbox": "^3.3"
   },
   "dependencies": {
-    "@architect/functions": "^3.13.9"
+    "@architect/functions": "^3.13.9",
+    "cssmitten": "^3.0.5"
   }
 }
